--- a/lang/es/es.json
+++ b/lang/es/es.json
@@ -86,6 +86,8 @@
 	"genre.count": "Género|Géneros",
 	"genre.name": "Nombre",
 	"genres": "Géneros",
+	"language.english": "Inglés",
+	"language.spanish": "Español",
 	"layout.index.title": "¿Qué vas a leer hoy?",
 	"layout.register.change_plan": "Cambiar plan",
 	"layout.register.selected_plan": "Tu plan seleccionado",
