Add trans to `User/Index` table columns

--- a/lang/en/en.json
+++ b/lang/en/en.json
@@ -17,6 +17,7 @@
 	"book.publishing_year": "Publishing year",
 	"book.title": "Title",
 	"books": "Books",
+	"common.action.actions": "Actions",
 	"common.action.add_new": "Add new",
 	"common.action.cancel": "Cancel",
 	"common.action.change": "Change",
