--- a/lang/es/es.json
+++ b/lang/es/es.json
@@ -17,6 +17,7 @@
 	"book.publishing_year": "Año de publicación",
 	"book.title": "Título",
 	"books": "Libros",
+	"common.action.actions": "Acciones",
 	"common.action.add_new": "Añadir nuevo",
 	"common.action.cancel": "Cancelar",
 	"common.action.change": "Cambiar",
