--- a/lang/en/en.json
+++ b/lang/en/en.json
@@ -228,6 +228,7 @@
 	"subscription.start_date": "Subscription start date",
 	"subscription.start_date.placeholder": "Select start date",
 	"subscription.type": "Subscription type",
+	"terms_and_conditions.url_path": "/terms-and-conditions",
 	"user": "User",
 	"user.role": "Role",
 	"user.role.admin": "Admin",
