--- a/lang/en/en.json
+++ b/lang/en/en.json
@@ -236,6 +236,7 @@
 	"user.status": "Status",
 	"user.status.active": "Active",
 	"user.status.canceled": "Canceled",
+	"user.status.expired": "Expired subscription",
 	"user.status.not_verified": "Not verified",
 	"users": "Users"
 }
